# bevy_voxel_world

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  rust.yml
assets/: custom_material.wgsl
examples/: bombs.rs  custom_material.rs  custom_meshing.rs  fast_traversal_ray.rs  multiple_cameras.rs  multiple_noise_terrain.rs  multiple_worlds.rs  navigation.rs  noise_terrain.rs  noise_terrain_lod.rs  ray_cast.rs  run_if.rs  set_voxel.rs  textures.rs  textures_custom_idx.rs
src/: chunk.rs  chunk_map.rs  configuration.rs  debug.rs  debug_draw.rs  lib.rs  mesh_cache.rs  meshing.rs  plugin.rs  test.rs  voxel.rs  voxel_material.rs  voxel_traversal.rs  voxel_world.rs  voxel_world_internal.rs
src/shaders/: voxel_texture.wgsl
