[package]
name = "bevy_voxel_world"
description = "A voxel world plugin for Bevy"
version = "0.12.0"
edition = "2021"
authors = ["Joacim Magnusson <joacim@isogram.se>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/splashdust/bevy_voxel_world"
repository = "https://github.com/splashdust/bevy_voxel_world"
documentation = "https://github.com/splashdust/bevy_voxel_world"
readme = "README.md"
exclude = ["/assets/", "/examples/", "/.github/"]
keywords = ["bevy", "voxels", "gamedev", "voxelengine"]
categories = ["game-development", "graphics"]

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.16", features = [
    "bevy_render",
    "bevy_asset",
    "bevy_pbr",
] }
block-mesh = "0.2.0"
ndshape = "0.3.0"
futures-lite = "2.6.0"
rand = "0.9.1"
ahash = "0.8.11"
weak-table = { version = "0.3.2", features = ["ahash"] }
noise = { version = "0.9.0", optional = true }
smooth-bevy-cameras = { version = "0.14.0", optional = true }
hashbrown = "0.15.2"

[dev-dependencies]

[[example]]
name = "fast_traversal_ray"
path = "examples/fast_traversal_ray.rs"
required-features = ["smooth-bevy-cameras"]

[[example]]
name = "bombs"
path = "examples/bombs.rs"
required-features = ["noise"]

[[example]]
name = "noise_terrain"
path = "examples/noise_terrain.rs"
required-features = ["noise"]

[[example]]
name = "custom_meshing"
path = "examples/custom_meshing.rs"
required-features = ["noise"]

[[example]]
name = "multiple_worlds"
path = "examples/multiple_worlds.rs"
required-features = ["noise"]
