[package]
name = "bevy_voxel_world"
description = "A voxel world plugin for Bevy"
version = "0.14.0"
edition = "2021"
authors = ["Joacim Magnusson <joacim@isogram.se>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/splashdust/bevy_voxel_world"
repository = "https://github.com/splashdust/bevy_voxel_world"
documentation = "https://github.com/splashdust/bevy_voxel_world"
readme = "README.md"
exclude = ["/.github/", "/assets/", "/examples/"]
keywords = ["bevy", "gamedev", "voxelengine", "voxels"]
categories = ["game-development", "graphics"]

[[example]]
name = "fast_traversal_ray"
path = "examples/fast_traversal_ray.rs"

[[example]]
name = "bombs"
path = "examples/bombs.rs"

[[example]]
name = "noise_terrain"
path = "examples/noise_terrain.rs"

[[example]]
name = "noise_terrain_lod"
path = "examples/noise_terrain_lod.rs"
required-features = ["noise"]

[[example]]
name = "custom_meshing"
path = "examples/custom_meshing.rs"

[[example]]
name = "multiple_worlds"
path = "examples/multiple_worlds.rs"

[[example]]
name = "multiple_noise_terrain"
path = "examples/multiple_noise_terrain.rs"

[[example]]
name = "navigation"
path = "examples/navigation.rs"

[dependencies]
ahash = "0.8.11"
bevy = { version = "0.18", features = [
  "bevy_asset",
  "bevy_pbr",
  "bevy_render",
] }
bevy_shader = "0.18"
block-mesh = "0.2.0"
futures-lite = "2.6.1"
hashbrown = "0.16.1"
ndshape = "0.3.0"
rand = "0.9.2"
weak-table = { version = "0.3.2", features = ["ahash"] }

[dev-dependencies]
bevy_northstar = { git = "https://github.com/AndreRoelofs/bevy_northstar", branch = "bevy_18" }
bevy_panorbit_camera = { version = "0.34.0" }
noise = { version = "0.9.0" }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
